# overlay-scoring-skeleton

./: README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
definitions/: example-dpa-clauses.yaml  example-four-layer.yaml
docs/: 01_architecture.md  migration-map.md
examples/overlays/: sample-dpa-clauses.yaml  sample-four-layer.yaml
schemas/: definition.schema.json
src/overlay_scoring/: __init__.py  overlay.py
tests/: test_overlay.py
